--- a/Movieplay/pom.xml
+++ b/Movieplay/pom.xml
@@ -44,6 +44,11 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>api.curso</groupId>
+			<artifactId>tp_spring</artifactId>
+			<version>0.0.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
