--- a/Movieplay/src/main/resources/application.properties
+++ b/Movieplay/src/main/resources/application.properties
@@ -19,5 +19,5 @@ spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleap
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
 
 # Configuración de JWT
-jwt.secret=your-secret-key
+jwt.secret=V3rYs3cR3tK3yF0rJWT
 jwt.expiration=36000000  # 10 hours
