--- a/Movieplay/src/main/resources/application.properties
+++ b/Movieplay/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Movieplay
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/movieplaydb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false}
+spring.datasource.url=spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/movieplaydb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false}
 spring.datasource.username=movieteam
 spring.datasource.password=apidevelopment123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,8 +8,8 @@ spring.servlet.multipart.max-request-size=10MB
 spring.jpa.hibernate.ddl-auto=validate
 
 # Configuración de OAuth2 para Google
-spring.security.oauth2.client.registration.google.client-id=your-client-id
-spring.security.oauth2.client.registration.google.client-secret=your-client-secret
+spring.security.oauth2.client.registration.google.client-id=138623808722-ur8aiu48ro7ku3lf2jpo5ethnsb0thcd.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
