--- a/Movieplay/pom.xml
+++ b/Movieplay/pom.xml
@@ -18,6 +18,7 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -81,6 +82,12 @@
 		  <groupId>org.springdoc</groupId>
 		  <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 		  <version>2.2.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>4.0.1</version> <!-- O la versión más reciente -->
+		    <scope>provided</scope>
 		</dependency>
 
 		<!--
