--- a/Movieplay/src/main/resources/application.yml
+++ b/Movieplay/src/main/resources/application.yml
@@ -11,7 +11,11 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/movieplaydb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-    username: root
+    username: root  # Usuario por defecto de MySQL en desarrollo
+
+  sql:
+    init:
+      mode: always  # Modo de inicialización para crear la base de datos si no existe 
   jpa:
     hibernate:
       ddl-auto: update
