--- a/Movieplay/src/main/resources/application.yml
+++ b/Movieplay/src/main/resources/application.yml
@@ -1,9 +1,6 @@
 jwt:
-  secret: MzI3ZjExYmQzNTU1NmM1MTQ3M2YxODliMzQxMzY2MDg=
   expiration: 3600 # Tiempo en segundos (por ejemplo, 3600 segundos = 1 hora)
   refreshExpiration: 86400 # Tiempo en segundos (por ejemplo, 86400 segundos = 1 día)
-
-
 
 spring:
   application:
@@ -15,7 +12,7 @@ spring:
     password: martin
   sql:
     init:
-      mode: always  # Modo de inicialización para crear la base de datos si no existe 
+      mode: always # Modo de inicialización para crear la base de datos si no existe
   jpa:
     hibernate:
       ddl-auto: update
@@ -32,8 +29,7 @@ spring:
           google:
             authorization-grant-type: authorization_code
             client-id: 571491722298-g91suheo3kcimlqkcnhs5cjfu3sefub1.apps.googleusercontent.com
-            client-secret: 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
-            redirect-uri: '{baseUrl}/login/oauth2/code/{registrationId}'
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
             scope: profile,email
   servlet:
     multipart:
