--- a/Movieplay/Dockerfile
+++ b/Movieplay/Dockerfile
@@ -4,17 +4,15 @@ FROM maven:3.8.4-openjdk-17-slim AS build
 # Establecemos el directorio de trabajo dentro del contenedor
 WORKDIR /app
 
-# Copiamos el archivo pom.xml para descargar las dependencias
+# Copiamos el archivo pom.xml y descargamos las dependencias
 COPY pom.xml .
+RUN mvn dependency:go-offline
 
 # Copiamos el resto del código fuente
 COPY src ./src
 
-# Damos permisos de ejecución al script mvnw
-RUN chmod +x ./mvnw
-
 # Compilamos la aplicación usando Maven (omitiendo las pruebas)
-RUN ./mvnw clean package -DskipTests
+RUN mvn clean package -DskipTests
 
 # Usamos una imagen base de OpenJDK para la aplicación en tiempo de ejecución
 FROM openjdk:17-jdk-slim AS runtime
