--- a/Movieplay/docker-compose.yml
+++ b/Movieplay/docker-compose.yml
@@ -2,29 +2,26 @@ version: '3.8'
 
 services:
   mysql:
-    image: mysql:8.0
-    container_name: mysql
-    ports:
-      - "3306:3306"
+    image: mysql:5.7
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: martin
       MYSQL_DATABASE: movieplaydb
-      MYSQL_USER: root
-      MYSQL_PASSWORD: martin
+    ports:
+      - "3306:3306"
     volumes:
-      - mysql-data:/var/lib/mysql
+      - mysql_data:/var/lib/mysql
 
   app:
     build: .
-    container_name: movieplay_app
     ports:
       - "8080:8080"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/movieplaydb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: martin
     depends_on:
       - mysql
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/movieplaydb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: martin
 
 volumes:
-  mysql-data:
+  mysql_data:
