--- a/Movieplay/src/main/resources/application.yml
+++ b/Movieplay/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    url: jdbc:mysql://localhost:3306/movieplaydb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://root:DecqjxZMXYaRZESLJgYtKhKiRcMrVthM@viaduct.proxy.rlwy.net:55959/railway?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
     password: martin
   sql:
     init:
