--- a/Movieplay/docker-compose.yml
+++ b/Movieplay/docker-compose.yml
@@ -1,17 +1,5 @@
 version: '3.8'
 
-services:
-  mysql:
-    image: mysql:5.7
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: martin
-      MYSQL_DATABASE: movieplaydb
-    ports:
-      - "3306:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
-
   app:
     build: .
     ports:
@@ -21,7 +9,7 @@ services:
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://root:DecqjxZMXYaRZESLJgYtKhKiRcMrVthM@viaduct.proxy.rlwy.net:55959/railway?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
       SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: martin
+      SPRING_DATASOURCE_PASSWORD: DecqjxZMXYaRZESLJgYtKhKiRcMrVthM
 
 volumes:
   mysql_data:
