--- a/Movieplay/src/main/resources/application.yml
+++ b/Movieplay/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     url: jdbc:mysql://root:DecqjxZMXYaRZESLJgYtKhKiRcMrVthM@viaduct.proxy.rlwy.net:55959/railway?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
-    password: martin
+    password: DecqjxZMXYaRZESLJgYtKhKiRcMrVthM
   sql:
     init:
       mode: always # Modo de inicialización para crear la base de datos si no existe
